# covid19pt-charts

./: CNAME  README.md  chart.py  heatmap.py  index.html  pyproject.toml  update-data.sh
.github/workflows/: main.yml
data/: amostras.csv  data.csv  data_concelhos.csv  groups.txt  regions.txt
output/: heatmap.csv  heatmap_daily.csv
public/: CNAME  index.html
