[tool.poetry]
name = "covid19_charts"
version = "0.1.0"
description = ""
authors = ["Tiago Dias <tiago@tdias.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
